fixed some wording

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -69,9 +69,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another handy feature of TorchText is that it has support for common datasets used in natural language process (NLP). \n",
+    "Another handy feature of TorchText is that it has support for common datasets used in natural language processing (NLP). \n",
     "\n",
-    "The following code automatically downloads the IMDb dataset and splits it into the canonical train/test splits as `torchtext.datasets` objects. It process the data using the `Fields` we have previously defined. "
+    "The following code automatically downloads the IMDb dataset and splits it into the canonical train/test splits as `torchtext.datasets` objects. It process the data using the `Fields` we have previously defined. The IMDb dataset consists of 50,000 movie reviews, each marked as being a positive or negative review."
    ]
   },
   {
@@ -250,7 +250,7 @@
     "\n",
     "![](https://i.imgur.com/TZRJAX4.png)\n",
     "\n",
-    "We can also view the most common words in the vocabulary. "
+    "We can also view the most common words in the vocabulary and their frequencies."
    ]
   },
   {
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f836744c1e0>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7f177954ee18>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -361,15 +361,15 @@
     "\n",
     "The RNN layer is our RNN which takes in our dense vector and the previous hidden state $h_{t-1}$, which it uses to calculate the next hidden state, $h_t$.\n",
     "\n",
-    "Finally, the linear layer takes the final hidden state and feeds it through a fully connected layer, $f(h_T)$, transforming it to the correct output dimension.\n",
-    "\n",
     "![](https://i.imgur.com/GIov3zF.png)\n",
+    "\n",
+    "Finally, the linear layer takes the final hidden state and feeds it through a fully connected layer, $f(h_T)$, transforming it to the correct output dimension.\n",
     "\n",
     "The `forward` method is called when we feed examples into our model.\n",
     "\n",
-    "Each batch, `x`, is a tensor of size _**[sentence length, batch size]**_. That is a batch of sentences, each having each word converted into a one-hot vector. \n",
+    "Each batch, `text`, is a tensor of size _**[sentence length, batch size]**_. That is a batch of sentences, each having each word converted into a one-hot vector. \n",
     "\n",
-    "You may notice that this tensor should have another dimension due to the one-hot vectors, however PyTorch conveniently stores a one-hot vector as it's index value, i.e. the tensor representing a sentence is just a tensor of the indexes for each token in that sentence.\n",
+    "You may notice that this tensor should have another dimension due to the one-hot vectors, however PyTorch conveniently stores a one-hot vector as it's index value, i.e. the tensor representing a sentence is just a tensor of the indexes for each token in that sentence. The act of converting a list of tokens into a list of indexes is commonly called *numericalizing*.\n",
     "\n",
     "The input batch is then passed through the embedding layer to get `embedded`, which gives us a dense vector representation of our sentences. `embedded` is a tensor of size _**[sentence length, batch size, embedding dim]**_.\n",
     "\n",
@@ -396,11 +396,11 @@
     "        self.rnn = nn.RNN(embedding_dim, hidden_dim)\n",
     "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "\n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        embedded = self.embedding(x)\n",
+    "        embedded = self.embedding(text)\n",
     "        \n",
     "        #embedded = [sent len, batch size, emb dim]\n",
     "        \n",
@@ -478,9 +478,9 @@
     "\n",
     "The loss function here is _binary cross entropy with logits_. \n",
     "\n",
-    "The prediction for each sentence is an unbound real number, as our labels are either 0 or 1, we want to restrict the number between 0 and 1, we do this using the _sigmoid_ or _logit_ functions. \n",
+    "Our model currently outputs an unbound real number. As our labels are either 0 or 1, we want to restrict the predictions to a number between 0 and 1. We do this using the _sigmoid_ or _logit_ functions. \n",
     "\n",
-    "We then calculate this bound scalar using binary cross entropy. \n",
+    "We then use this this bound scalar to calculate the loss using binary cross entropy. \n",
     "\n",
     "The `BCEWithLogitsLoss` criterion carries out both the sigmoid and the binary cross entropy steps."
    ]
@@ -550,9 +550,9 @@
     "\n",
     "For each batch, we first zero the gradients. Each parameter in a model has a `grad` attribute which stores the gradient calculated by the `criterion`. PyTorch does not automatically remove (or \"zero\") the gradients calculated from the last gradient calculation, so they must be manually zeroed.\n",
     "\n",
-    "We then feed the batch of sentences, `batch.text`, into the model. Note, you do not need to do `model.forward(batch.text)`, simply calling the model works. The `squeeze` is needed as the predictions are initially size _**[batch size, 1]**_, and we need to remove the dimension of size 1 as PyTorch expects the predictions input to a loss function to simply be of size _**[batch size]**_.\n",
+    "We then feed the batch of sentences, `batch.text`, into the model. Note, you do not need to do `model.forward(batch.text)`, simply calling the model works. The `squeeze` is needed as the predictions are initially size _**[batch size, 1]**_, and we need to remove the dimension of size 1 as PyTorch expects the predictions input to our criterion function to be of size _**[batch size]**_.\n",
     "\n",
-    "The loss and accuracy are then calculated using our predictions and the labels, `batch.label`. \n",
+    "The loss and accuracy are then calculated using our predictions and the labels, `batch.label`, with the loss being averaged over all examples in the batch.\n",
     "\n",
     "We calculate the gradient of each parameter with `loss.backward()`, and then update the parameters using the gradients and optimizer algorithm with `optimizer.step()`.\n",
     "\n",
@@ -560,7 +560,7 @@
     "\n",
     "Finally, we return the loss and accuracy, averaged across the epoch. The `len` of an iterator is the number of batches in the iterator.\n",
     "\n",
-    "You may recall when initializing the `LABEL` field, we set `dtype=torch.float`. This is because TorchText sets tensors to be `LongTensor`s by default, however our criterion expects both inputs to be `FloatTensor`s. As we have manually set the `dtype` to be `torch.float`, this is automatically done for us. The alternative method of doing this would be to do the conversion inside the `train` function by passing `batch.label.float()` instad of `batch.label` to the criterion. "
+    "You may recall when initializing the `LABEL` field, we set `dtype=torch.float`. This is because TorchText sets tensors to be `LongTensor`s by default, however our criterion expects both inputs to be `FloatTensor`s. Setting the `dtype` to be `torch.float`, did this for us. The alternative method of doing this would be to do the conversion inside the `train` function by passing `batch.label.float()` instad of `batch.label` to the criterion. "
    ]
   },
   {
@@ -735,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
