changed imgur urls to own assets

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -193,7 +193,7 @@
     "\n",
     "We do this as our machine learning model cannot operate on strings, only numbers. Each _index_ is used to construct a _one-hot_ vector for each word. A one-hot vector is a vector where all of the elements are 0, except one, which is 1, and dimensionality is the total number of unique words in your vocabulary, commonly denoted by $V$.\n",
     "\n",
-    "![](https://i.imgur.com/0o5Gdar.png)\n",
+    "![](assets/sentiment5.png)\n",
     "\n",
     "The number of unique words in our training set is over 100,000, which means that our one-hot vectors will have over 100,000 dimensions! This will make training slow and possibly won't fit onto your GPU (if you're using one). \n",
     "\n",
@@ -248,7 +248,7 @@
     "\n",
     "When we feed sentences into our model, we feed a _batch_ of them at a time, i.e. more than one at a time, and all sentences in the batch need to be the same size. Thus, to ensure each sentence in the batch is the same size, any shorter than the longest within the batch are padded.\n",
     "\n",
-    "![](https://i.imgur.com/TZRJAX4.png)\n",
+    "![](assets/sentiment6.png)\n",
     "\n",
     "We can also view the most common words in the vocabulary and their frequencies."
    ]
@@ -361,7 +361,7 @@
     "\n",
     "The RNN layer is our RNN which takes in our dense vector and the previous hidden state $h_{t-1}$, which it uses to calculate the next hidden state, $h_t$.\n",
     "\n",
-    "![](https://i.imgur.com/GIov3zF.png)\n",
+    "![](assets/sentiment7.png)\n",
     "\n",
     "Finally, the linear layer takes the final hidden state and feeds it through a fully connected layer, $f(h_T)$, transforming it to the correct output dimension.\n",
     "\n",
