fixed wording on notebook 2

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -57,9 +57,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first addition is the use of pre-trained word embeddings. Now, instead of having our word embeddings initialized randomly, they are initialized with these pre-trained vectors.",
+    "The first addition is the use of pre-trained word embeddings. Now, instead of having our word embeddings initialized randomly, they are initialized with these pre-trained vectors.\n",
+    "We get these vectors simply by specifying which vectors we want and passing it as an argument to `build_vocab`. `TorchText` handles downloading the vectors and associating them with the correct words in our vocabulary.\n",
     "\n",
-    "We get these vectors simply by specifying which vectors we want, and passing it as an argument to `build_vocab`. Here, we'll be using the `\"glove.6B.100d\" vectors\"`. `glove` is the algorithm used to calculate the vectors, go [here](https://nlp.stanford.edu/projects/glove/) for more. `6B` indicates these vectors were trained on 6 billion tokens and `100d` indicates these vectors are 100-dimensional.\n",
+    "Here, we'll be using the `\"glove.6B.100d\" vectors\"`. `glove` is the algorithm used to calculate the vectors, go [here](https://nlp.stanford.edu/projects/glove/) for more. `6B` indicates these vectors were trained on 6 billion tokens and `100d` indicates these vectors are 100-dimensional.\n",
     "\n",
     "You can see the other available vectors [here](https://github.com/pytorch/text/blob/master/torchtext/vocab.py#L113).\n",
     "\n",
@@ -115,7 +116,7 @@
     "\n",
     "$$(h_t, c_t) = \\text{LSTM}(x_t, h_t, c_t)$$\n",
     "\n",
-    "Thus, the model using an LSTM looks something like:\n",
+    "Thus, the model using an LSTM looks something like (with the embedding layers omitted):\n",
     "\n",
     "![](assets/sentiment2.png)\n",
     "\n",
@@ -123,7 +124,11 @@
     "\n",
     "### Bidirectional RNN\n",
     "\n",
-    "The concept behind a bidirectional RNN is simple. As well as having an RNN processing the words in the sentence from the first to the last (a forward RNN), we have a second RNN processing the words in the sentence from the **last to the first** (a backward RNN). In PyTorch, the hidden state (and cell state) tensors returned by the forward and backward RNNs are stacked on top of each other. We make our sentiment prediction using the last hidden state from the forward RNN (obtained from final word of the sentence), $h_T^\\rightarrow$, and the last hidden state from the backward RNN (obtained from the first word of the sentence), $h_T^\\leftarrow$, i.e. $\\hat{y}=f(h_T^\\rightarrow, h_T^\\leftarrow)$   \n",
+    "The concept behind a bidirectional RNN is simple. As well as having an RNN processing the words in the sentence from the first to the last (a forward RNN), we have a second RNN processing the words in the sentence from the **last to the first** (a backward RNN). At time step $t$, the forward RNN is processing word $x_t$, and the backward RNN is processing word $x_{T-t+1}$. \n",
+    "\n",
+    "In PyTorch, the hidden state (and cell state) tensors returned by the forward and backward RNNs are stacked on top of each other in a single tensor. \n",
+    "\n",
+    "We make our sentiment prediction using a concatenation of the last hidden state from the forward RNN (obtained from final word of the sentence), $h_T^\\rightarrow$, and the last hidden state from the backward RNN (obtained from the first word of the sentence), $h_T^\\leftarrow$, i.e. $\\hat{y}=f(h_T^\\rightarrow, h_T^\\leftarrow)$   \n",
     "\n",
     "The image below shows a bi-directional RNN, with the forward RNN in orange, the backward RNN in green and the linear layer in silver.  \n",
     "\n",
@@ -139,7 +144,7 @@
     "\n",
     "### Regularization\n",
     "\n",
-    "Although we've added improvements to our model, each one adds additional parameters. Without going into overfitting into to much detail, the more parameters you have in in your model, the higher the probability that your model will overfit (memorize the training data, causing  a low training error but high validation/testing error, i.e. poor generalization to new, unseen examples). To combat this, we use regularization. More specifically, we use a method of regularization called *dropout*. Dropout works by randomly *dropping out* (setting to 0) neurons in a layer during a forward pass. The probability that each neuron is dropped out is set by a hyperparameter and each neuron with dropout applied is considered indepenently. One theory about why dropout works is that a model with parameters dropped out can be seen as a \"weaker\" (less parameters) model. The predictions from all these \"weaker\" models (one for each forward pass) get averaged together withinin the parameters of the model. Thus, your one model can be thought of as an ensemble of weaker models, none of which are over-parameterized and thus should not overfit.\n",
+    "Although we've added improvements to our model, each one adds additional parameters. Without going into overfitting into too much detail, the more parameters you have in in your model, the higher the probability that your model will overfit (memorize the training data, causing  a low training error but high validation/testing error, i.e. poor generalization to new, unseen examples). To combat this, we use regularization. More specifically, we use a method of regularization called *dropout*. Dropout works by randomly *dropping out* (setting to 0) neurons in a layer during a forward pass. The probability that each neuron is dropped out is set by a hyperparameter and each neuron with dropout applied is considered indepenently. One theory about why dropout works is that a model with parameters dropped out can be seen as a \"weaker\" (less parameters) model. The predictions from all these \"weaker\" models (one for each forward pass) get averaged together withinin the parameters of the model. Thus, your one model can be thought of as an ensemble of weaker models, none of which are over-parameterized and thus should not overfit.\n",
     "\n",
     "### Implementation Details\n",
     "\n",
@@ -149,7 +154,7 @@
     "\n",
     "Implementing bidirectionality and adding additional layers are done by passing values for the `num_layers` and `bidirectional` arguments for the RNN/LSTM. \n",
     "\n",
-    "Dropout is implemented by initializing an `nn.Dropout` layer (the argument is the probability of dropping out each neuron) and using it within the `forward` method after each layer we want to apply dropout to. **Note**: never use dropout on the input or output layers (`x` or `fc` in this case), you only ever want to use dropout on intermediate layers. The LSTM has a `dropout` argument which adds dropout on the connections between hidden states in one layer to hidden states in the next layer. \n",
+    "Dropout is implemented by initializing an `nn.Dropout` layer (the argument is the probability of dropping out each neuron) and using it within the `forward` method after each layer we want to apply dropout to. **Note**: never use dropout on the input or output layers (`text` or `fc` in this case), you only ever want to use dropout on intermediate layers. The LSTM has a `dropout` argument which adds dropout on the connections between hidden states in one layer to hidden states in the next layer. \n",
     "\n",
     "The final hidden state, `hidden`, has a shape of _**[num layers * num directions, batch size, hid dim]**_. These are ordered: **[forward_layer_0, backward_layer_0, forward_layer_1, backward_layer 1, ..., forward_layer_n, backward_layer n]**. As we want the final (top) layer forward and backward hidden states, we get the top two hidden layers from the first dimension, `hidden[-2,:,:]` and `hidden[-1,:,:]`, and concatenate them together before passing them to the linear layer (after applying dropout). "
    ]
@@ -163,19 +168,21 @@
     "import torch.nn as nn\n",
     "\n",
     "class RNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, n_layers, bidirectional, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, \n",
+    "                 output_dim, n_layers, bidirectional, dropout):\n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers=n_layers, bidirectional=bidirectional, dropout=dropout)\n",
+    "        self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers=n_layers, \n",
+    "                           bidirectional=bidirectional, dropout=dropout)\n",
     "        self.fc = nn.Linear(hidden_dim*2, output_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "        \n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        embedded = self.dropout(self.embedding(x))\n",
+    "        embedded = self.dropout(self.embedding(text))\n",
     "        \n",
     "        #embedded = [sent len, batch size, emb dim]\n",
     "        \n",
@@ -453,11 +460,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.667 | Train Acc: 59.63% | Val. Loss: 0.594 | Val. Acc: 68.39% |\n",
-      "| Epoch: 02 | Train Loss: 0.610 | Train Acc: 65.96% | Val. Loss: 0.523 | Val. Acc: 74.06% |\n",
-      "| Epoch: 03 | Train Loss: 0.390 | Train Acc: 83.55% | Val. Loss: 0.318 | Val. Acc: 87.27% |\n",
-      "| Epoch: 04 | Train Loss: 0.251 | Train Acc: 90.43% | Val. Loss: 0.370 | Val. Acc: 85.56% |\n",
-      "| Epoch: 05 | Train Loss: 0.183 | Train Acc: 93.18% | Val. Loss: 0.308 | Val. Acc: 88.28% |\n"
+      "| Epoch: 01 | Train Loss: 0.665 | Train Acc: 59.50% | Val. Loss: 0.634 | Val. Acc: 68.10% |\n",
+      "| Epoch: 02 | Train Loss: 0.588 | Train Acc: 69.04% | Val. Loss: 0.429 | Val. Acc: 81.64% |\n",
+      "| Epoch: 03 | Train Loss: 0.453 | Train Acc: 79.63% | Val. Loss: 0.476 | Val. Acc: 80.68% |\n",
+      "| Epoch: 04 | Train Loss: 0.390 | Train Acc: 83.45% | Val. Loss: 0.377 | Val. Acc: 84.55% |\n",
+      "| Epoch: 05 | Train Loss: 0.278 | Train Acc: 88.96% | Val. Loss: 0.320 | Val. Acc: 88.08% |\n"
      ]
     }
    ],
@@ -488,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.374 | Test Acc: 85.35% |\n"
+      "| Test Loss: 0.350 | Test Acc: 86.48% |\n"
      ]
     }
    ],
@@ -550,7 +557,7 @@
     {
      "data": {
       "text/plain": [
-       "0.00401143217459321"
+       "0.009576601907610893"
       ]
      },
      "execution_count": 16,
@@ -577,7 +584,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9425999522209167"
+       "0.9811310768127441"
       ]
      },
      "execution_count": 17,
@@ -615,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
