updated assets and wording for notebook 3

--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'This film', 'film is', 'is terrible']"
+       "['This', 'film', 'is', 'terrible', 'film is', 'This film', 'is terrible']"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been indexed (transformed from a list of tokens to a list of indexes). This is where we'll pass our `generate_bigrams` function."
+    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been numericalized (transformed from a list of tokens to a list of indexes). This is where we'll pass our `generate_bigrams` function."
    ]
   },
   {
@@ -157,19 +157,23 @@
     "\n",
     "This model has far fewer parameters than the previous model as it only has 2 layers that have any parameters, the embedding layer and the linear layer. There is no RNN component in sight!\n",
     "\n",
-    "Instead, it first calculates the word embedding for each word using the `Embedding` layer (purple), then calculates the average of all of the word embeddings and feeds this through the `Linear` layer (silver), and that's it!\n",
+    "Instead, it first calculates the word embedding for each word using the `Embedding` layer (blue), then calculates the average of all of the word embeddings (pink) and feeds this through the `Linear` layer (silver), and that's it!\n",
     "\n",
-    "![](https://i.imgur.com/e0sWZoZ.png)\n",
+    "![](assets/sentiment8.png)\n",
     "\n",
     "We implement the averaging with the `avg_pool2d` (average pool 2-dimensions) function. Initially, you may think using a 2-dimensional pooling seems strange, surely our sentences are 1-dimensional, not 2-dimensional? However, you can think of the word embeddings as a 2-dimensional grid, where the words are along one axis and the dimensions of the word embeddings are along the other. The image below is an example sentence after being converted into 5-dimensional word embeddings, with the words along the vertical axis and the embeddings along the horizontal axis. Each element in this [4x5] tensor is represented by a green block.\n",
     "\n",
-    "![](https://i.imgur.com/SSH25NT.png)\n",
+    "![](assets/sentiment9.png)\n",
     "\n",
     "The `avg_pool2d` uses a filter of size `embedded.shape[1]` (i.e. the length of the sentence) by 1. This is shown in pink in the image below.\n",
     "\n",
-    "![](https://i.imgur.com/U7eRnIe.png)\n",
+    "![](assets/sentiment10.png)\n",
     "\n",
-    "The filter then slides to the right, calculating the average of the next column of embedding values for each word in the sentence. After the filter has covered all embedding dimensions, we get a [1x5] tensor. This tensor is then passed through the linear layer to produce our prediction."
+    "We calculate the average value of all elements covered by the filter, then the filter then slides to the right, calculating the average over the next column of embedding values for each word in the sentence. \n",
+    "\n",
+    "![](assets/sentiment11.png)\n",
+    "\n",
+    "Each filter position gives us a single value, the average of all covered elements. After the filter has covered all embedding dimensions we get a [1x5] tensor. This tensor is then passed through the linear layer to produce our prediction."
    ]
   },
   {
@@ -188,11 +192,11 @@
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
     "        self.fc = nn.Linear(embedding_dim, output_dim)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "        \n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        embedded = self.embedding(x)\n",
+    "        embedded = self.embedding(text)\n",
     "                \n",
     "        #embedded = [sent len, batch size, emb dim]\n",
     "        \n",
@@ -518,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "2.414095661151805e-07"
+       "2.414077187040675e-07"
       ]
      },
      "execution_count": 18,
@@ -563,7 +567,7 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "In the final notebook we'll use convolutional neural networks (CNNs) to perform sentiment analysis, and get our best accuracy yet!"
+    "In the next notebook we'll use convolutional neural networks (CNNs) to perform sentiment analysis, and get our best accuracy yet!"
    ]
   }
  ],
@@ -583,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
